Added 32-bit and 64-bit builds until 3D rendering issues are fixed on the 64-bit version

--- a/Source/3rdPartyLibs/GNU.Getopt/GNU.Getopt.csproj
+++ b/Source/3rdPartyLibs/GNU.Getopt/GNU.Getopt.csproj
@@ -4,7 +4,8 @@
     <OutputType>Library</OutputType>
     <IsPublishable>False</IsPublishable>
     <Description>GNU.Getopt (forked from arbinada/gettext-dotnet)</Description>
-    <PackageLicenseExpression>LGPL-2.1-or-later</PackageLicenseExpression>      	  
+    <PackageLicenseExpression>LGPL-2.1-or-later</PackageLicenseExpression>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Getopt.cs" />
