--- a/Source/3rdPartyLibs/GNU.Gettext.WinForms/GNU.Gettext.WinForms.csproj
+++ b/Source/3rdPartyLibs/GNU.Gettext.WinForms/GNU.Gettext.WinForms.csproj
@@ -6,6 +6,7 @@
     <IsPublishable>False</IsPublishable>
     <Description>GNU.Gettext.WinForms (forked from arbinada/gettext-dotnet)</Description>
     <PackageLicenseExpression>LGPL-2.1-or-later</PackageLicenseExpression>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="LocalizableObjectAdapter.cs" />
