--- a/Source/3rdPartyLibs/GNU.Gettext/GNU.Gettext.csproj
+++ b/Source/3rdPartyLibs/GNU.Gettext/GNU.Gettext.csproj
@@ -5,6 +5,7 @@
     <IsPublishable>False</IsPublishable>
     <Description>GNU.Gettext (forked from arbinada/gettext-dotnet)</Description>
     <PackageLicenseExpression>LGPL-2.1-or-later</PackageLicenseExpression>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Catalog/Catalog.cs" />
