--- a/Source/Contrib/SimulatorTester/SimulatorTester.csproj
+++ b/Source/Contrib/SimulatorTester/SimulatorTester.csproj
@@ -15,6 +15,7 @@
     <Product>Open Rails</Product>
     <Copyright>Copyright © 2009 - 2022</Copyright>
     <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ORTS.Common\ORTS.Common.csproj" />
