Updated analysers and enabled them

--- a/Source/Directory.Build.targets
+++ b/Source/Directory.Build.targets
@@ -2,5 +2,6 @@
   <PropertyGroup>
     <Product>Open Rails FR</Product>
     <Version>0.1.0</Version>
+    <EnableNETAnalyzers>True</EnableNETAnalyzers>
   </PropertyGroup>
 </Project>
