--- a/Source/Contrib/TrackViewer/app.config
+++ b/Source/Contrib/TrackViewer/app.config
@@ -168,4 +168,7 @@
             </setting>
         </ORTS.TrackViewer.Properties.Settings>
     </userSettings>
-<startup useLegacyV2RuntimeActivationPolicy="true"><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+    </startup>
+</configuration>
